--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </form>
       </section>
       <hr style="max-width: 100%" />
-      <section id="section2"></section>
+      <div id="section2"></div>
     </main>
   </body>
 </html>
