--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="./index.js" defer></script>
   </head>
   <body>
+    <h5>Made by Franck Brice Avom</h5>
     <main id="main">
       <section id="section1">
         <label class="label-for-input">Search for GitHub Profil infos.</label
@@ -27,7 +28,7 @@
           />
         </form>
       </section>
-      <hr style="max-width: 100%" />
+      <hr style="max-width: 100%; color: #123350;" />
       <div id="section2"></div>
     </main>
   </body>
