customize the global view

--- a/index.html
+++ b/index.html
@@ -29,7 +29,24 @@
         </form>
       </section>
       <hr style="max-width: 100%; color: #123350;" />
-      <div id="section2"></div>
+      <section id="section2">
+        <!-- <div class="div-for-repos">
+          <h4 class="repo-name">6to5</h4>
+          <p class="repo-description">Turn ES6 code into readable vanilla ES5 with source maps <br/> 
+             <span class="stars">
+            ☆ 0 stars
+             </span>
+          </p>
+          <p class="repo-url">
+                 https://github.com/f/6to5
+          </p><br/>
+          <p class="view-readme">
+                  <a href="/repo/view-readme/f/6to5/master">
+                      View Readme
+                  </a>
+          </p>
+        </div> -->
+      </section>
     </main>
   </body>
 </html>
